@@ -100,8 +100,8 @@ binary-truncate:		yes
 # Value: 'native', 'big-endian'
 binary-byteorder:		big-endian
 
-# Allow larger REDEFINES items
-larger-redefines-ok:		no # not verified yet
+# Allow larger REDEFINES items other than 01 non-external
+larger-redefines:		ok # not verified yet
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		yes
