@@ -102,8 +102,8 @@ binary-truncate:		yes # TO-DO: For BINARY, *not* for COMP or COMP-5!
 # Value: 'native', 'big-endian'
 binary-byteorder:		big-endian
 
-# Allow larger REDEFINES items
-larger-redefines-ok:		no # TO-DO: Except for level 01 items.
+# Allow larger REDEFINES items other than 01 non-external
+larger-redefines:		error
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		no
