@@ -109,8 +109,8 @@ binary-truncate:		yes
 # Value: 'native', 'big-endian'
 binary-byteorder:		big-endian
 
-# Allow larger REDEFINES items
-larger-redefines-ok:		no
+# Allow larger REDEFINES items other than 01 non-external
+larger-redefines:		error
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		no
