@@ -103,8 +103,8 @@ binary-truncate:		no
 # Value: 'native', 'big-endian'
 binary-byteorder:		big-endian
 
-# Allow larger REDEFINES items
-larger-redefines-ok:		yes
+# Allow larger REDEFINES items other than 01 non-external
+larger-redefines:		ok
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		yes
