@@ -43,8 +43,8 @@ literal-length:			160
 numeric-literal-length:		18 # to check
 pic-length:			100 # to check
 
-# Value: 'mf', 'ibm'
-#
+# Default assign type
+# Value: 'dynamic', 'external'
 assign-clause:			dynamic # to check
 
 # If yes, file names are resolved at run time using
@@ -100,8 +100,8 @@ binary-truncate:		no # to check
 # Value: 'native', 'big-endian'
 binary-byteorder:		big-endian # to check
 
-# Allow larger REDEFINES items
-larger-redefines-ok:		no # not verified yet
+# Allow larger REDEFINES items other than 01 non-external
+larger-redefines:		error # not verified yet
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		no # to check
