@@ -107,8 +107,8 @@ binary-truncate:		yes
 # Value: 'native', 'big-endian'
 binary-byteorder:		big-endian
 
-# Allow larger REDEFINES items
-larger-redefines-ok:		yes # TO-DO: But only for 01 items (see p. 134)
+# Allow larger REDEFINES items other than 01 non-external
+larger-redefines:		ok # (see p. 134)
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		yes # TO-DO: For REDEFINES position, at least.
