@@ -427,7 +427,6 @@ test.conf: missing definitions:
 	no definition of 'complex-odo'
 	no definition of 'odoslide'
 	no definition of 'indirect-redefines'
-	no definition of 'larger-redefines-ok'
 	no definition of 'relax-syntax-checks'
 	no definition of 'ref-mod-zero-length'
 	no definition of 'relax-level-hierarchy'
@@ -491,6 +490,7 @@ test.conf: missing definitions:
 	no definition of 'word-continuation'
 	no definition of 'not-exception-before-exception'
 	no definition of 'accept-display-extensions'
+	no definition of 'larger-redefines'
 	no definition of 'renames-uncommon-levels'
 	no definition of 'symbolic-constant'
 	no definition of 'constant-78'
